# Velyx-OS

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
app-manifests/: com.velyx.browser.json  com.velyx.files.json  com.velyx.testapp.json
apps/file-manager/: CMakeLists.txt
apps/file-manager/qml/: Main.qml
apps/file-manager/src/: main.cpp
apps/settings/: CMakeLists.txt
apps/settings/ai/: AIAuditPage.qml  AIPreferencesPage.qml  AIPrivacyPage.qml
apps/settings/qml/: Main.qml
apps/settings/src/: main.cpp
apps/shell/: CMakeLists.txt
apps/shell/ai/: AICommandPalette.qml  AIConfirmationDialog.qml  AIOverlay.qml  AIResultCard.qml
apps/shell/qml/: AgentPanel.qml  AiSuggestionPanel.qml  AppCard.qml  AssistantPanel.qml  AutomationPanel.qml  ControlCenterPanel.qml  DetailsPanel.qml  DevModePanel.qml  DiagnosticsPanel.qml  FirstBoot.qml  FirstBootOverlay.qml  IntentCard.qml  Main.qml  OpenAppsPanel.qml  PermissionDialog.qml  SpaceCard.qml  SpaceOverviewPanel.qml  StatusChip.qml  SuggestedActionsPanel.qml  SystemStatusPanel.qml
apps/shell/src/: aiclient.cpp  aiclient.h  inputcontroller.cpp  inputcontroller.h  main.cpp  permissionclient.cpp  permissionclient.h
docs/: ai-architecture.md  ai-layer.md  app-model.md  architecture.md  assistant.md  auto-boot.md  bootable-prototype.md  control-center.md  dev-agent.md  dev-mode-ux.md  dev-mode.md  dev-visual-loop.md  dev-workflow.md  file-service-foundation.md  first-boot-lifecycle.md  first-boot.md  install-bootstrap.md  install-preview.md  install-session-handoff.md  intents-system.md  lifecycle-boot-install-session.md  local-model-runtime.md  model-runtime.md  network.md  qemu-run.md  release-preview.md  rootfs-layout.md  runtime-usage.md  security-risks.md  spaces-system.md  state-layout.md  system-entry.md  system-identity.md  systemd-user-session-runtime.md  update-recovery-foundation.md  update-recovery-runnable-prototype.md  update-recovery.md  vm-install.md  vm-preview.md
profiles/: velyx-release-preview.json  velyx-vm-preview.json  velyx-vm-profile.json
scripts/: build-base-rootfs.sh  build-image.sh  build-rootfs.sh  configure-dev.ps1  install-units.sh  prepare-boot-artifacts.sh  run-qemu.sh  velyx-agent  velyx-ai  velyx-app  velyx-assistant  velyx-baremetal-install.sh  velyx-build-installer-iso.sh  (+29 more)
services/: Cargo.toml  README.md
services/ai-service/: Cargo.toml
services/ai-service/src/: api.rs  audit.rs  context.rs  errors.rs  explain.rs  intent.rs  main.rs  model.rs  parser.rs  pending.rs  policy_guard.rs  router.rs  session.rs  tool_executor.rs  tool_registry.rs
services/compatibility-manager/: Cargo.toml
services/compatibility-manager/src/: main.rs
services/diagnostics-service/: Cargo.toml
services/diagnostics-service/src/: api.rs  audit.rs  collectors.rs  errors.rs  main.rs  model.rs  summary.rs
services/file-service/: Cargo.toml
services/file-service/src/: access_policy.rs  api.rs  audit.rs  errors.rs  main.rs  metadata.rs  recent.rs  search.rs
services/installer-service/: Cargo.toml
services/installer-service/src/: api.rs  audit.rs  errors.rs  handoff.rs  main.rs  model.rs  store.rs
services/launcher-service/: Cargo.toml
services/launcher-service/src/: audit.rs  launcher.rs  main.rs  manifest.rs  portals.rs  sandbox.rs  seccomp.rs  tracking.rs
services/permissions-service/: Cargo.toml
services/permissions-service/src/: api.rs  identity.rs  logger.rs  main.rs  model.rs  policy.rs  store.rs
services/recovery-service/: Cargo.toml
services/recovery-service/src/: api.rs  audit.rs  errors.rs  main.rs  model.rs  orchestration.rs  rollback.rs  store.rs
services/session-manager-service/: Cargo.toml
services/session-manager-service/src/: api.rs  audit.rs  automation.rs  errors.rs  first_boot.rs  handoff.rs  health.rs  main.rs  model.rs  orchestrator.rs  shell_launch.rs  startup.rs  state.rs  units.rs
services/settings-service/: Cargo.toml
services/settings-service/src/: api.rs  audit.rs  errors.rs  main.rs  model.rs  policy.rs  schema.rs  store.rs
services/update-engine/: Cargo.toml
services/update-engine/src/: api.rs  apply.rs  audit.rs  errors.rs  main.rs  model.rs  orchestration.rs  reconciliation.rs  snapshot.rs  store.rs  verification.rs
(+23 files in other folders)
